--- a/style-something.css
+++ b/style-something.css
@@ -1,6 +1,8 @@
 /* ---------- Global Styles for index.html ---------- */
+
 body {
-    background-image: url("./images/lw3kl94s69nb1.jpg");  /* Ensure this path is correct */
+    background-image: url("./images/lw3kl94s69nb1.jpg");
+    /* Ensure this path is correct */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -11,7 +13,9 @@ body {
     text-align: center;
 }
 
+
 /* ---------- Question Container ---------- */
+
 .content {
     position: absolute;
     top: 15%;
@@ -32,11 +36,13 @@ body {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
+
 /* ---------- Choices Container ---------- */
+
 .choices {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 80%;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
@@ -44,7 +50,9 @@ body {
     gap: 20px;
 }
 
+
 /* ---------- Choice Styles ---------- */
+
 .choice {
     text-align: center;
 }
